Add form and session's counter

--- a/classworks/yegor-koren/11_koa/src/web/client/index.html
+++ b/classworks/yegor-koren/11_koa/src/web/client/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Koa</title>
+    <title>Winter holidays</title>
   </head>
   <body class="container">
     <div class="content">
@@ -10,10 +10,10 @@
         <p>Sessions's counter: ...</p>
       </div>
       <h1>How I spent winter holidays?</h1>
-      <form class="form" action="index.html" method="post">
+      <form class="form" method="post">
         <input class="input" type="text" name="name" value="" placeholder="name">
         <input class="input" type="text" name="surname" value="" placeholder="surname">
-        <textarea name="name" rows="8" cols="40"></textarea>
+        <textarea name="message" rows="8" cols="40"></textarea>
         <p>Select value</p>
         <select class="select" name="value" placeholder="message">
           <option value="0">0</option>
@@ -28,8 +28,9 @@
           <option value="9">9</option>
           <option value="10">10</option>
         </select>
-        <button type="button" name="Submit">Submit</button>
+        <input type="submit" name="submit">
       </form>
+      <a href="/reviews">Show all reviews</a>
     </div>
   </body>
 </html>
