--- a/classworks/yegor-koren/11_koa/src/web/client/index.html
+++ b/classworks/yegor-koren/11_koa/src/web/client/index.html
@@ -30,7 +30,7 @@
         </select>
         <input type="submit" name="submit">
       </form>
-      <a href="/reviews">Show all reviews</a>
+      <a href="/reviews.html">Show all reviews</a>
     </div>
   </body>
 </html>
