--- a/classworks/yegor-koren/11_koa/src/web/client/reviews.html
+++ b/classworks/yegor-koren/11_koa/src/web/client/reviews.html
@@ -3,8 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Rewievs</title>
+    <script defer src="reviews.js"></script>
   </head>
-  <body class="container">
-    <p>qwert</p>
+  <body>
+    <div class="reviews">
+    </div>
+
   </body>
 </html>
