Add joi validation

--- a/classworks/yegor-koren/11_koa/src/web/client/reviews.html
+++ b/classworks/yegor-koren/11_koa/src/web/client/reviews.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Rewievs</title>
-    <script defer src="reviews.js"></script>
+
   </head>
   <body>
     <div class="reviews">
     </div>
-
+    <!-- <script src="reviews.js"></script> -->
   </body>
 </html>
