--- a/classworks/yegor-koren/11_koa/src/web/client/reviews.html
+++ b/classworks/yegor-koren/11_koa/src/web/client/reviews.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title>Rewievs</title>
-
   </head>
   <body>
+    <a href="/">Back to form</a>
+    <hr/>
     <div class="reviews">
     </div>
-    <!-- <script src="reviews.js"></script> -->
   </body>
 </html>
